--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialVerse.NoActionBar">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.login2.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
