Started to Create the Group View.
Modified Menu resource items' names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         <activity
             android:name=".ui.group.GroupActivity"
             android:exported="false"
-            android:label="@string/title_activity_group"
-            android:theme="@style/Theme.SocialVerse.NoActionBar.NoActionBar" />
+            android:label="@string/title_activity_group" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
